# oxidizedoasis-websands

./: .env  .env.example  .gitignore  Cargo.toml  Software_Development_Document.md  build.bat  new_ssd.md  newssd.md  readme.md  setup-database.ps1
docs/: Architecture_Review.md  CSP_Security_Analysis.md  CyberSecurity.md  JWT_Refresh_Mechanism_Assessment.md  JWT_Security_Assessment.md  JWT_Token_Flow.md  JulesMaster.md  Jules_Business_Tasks.md  Jules_Web_Tasks.md  Jules_tasks.md  Logging_Plan.md  PROMPT_FOR_JULES_MASTER_TASKS.md  Project_Structure.md  Security_Audit.md  Security_Audit_Report.md  Security_Backlog.md  Security_Implementation_Analysis.md  Software_Development_Document.md  Software_development_Document.md  Structure_Chart.md  Testing.md  Testing_Backlog.md  project_status_and_todo.md  test_coverage_and_todo.md  test_coverage_summary.md  yew-conversion-plan.md  yew-project-structure.md
docs/Software Development Document/: CHAPTER 01 - INTRODUCTION.md  CHAPTER 02 - SYSTEM OVERVIEW.md  CHAPTER 03 - SYSTEM FEATURES.md  CHAPTER 05 - EXTERNAL INTERFACES.md  CHAPTER 06 - NON-FUNCTIONAL REQUIREMENTS.md  CHAPTER 07 - IMPLEMENTATION DETAILS.md  CHAPTER 09 - DEPLOYMENT.md  CHAPTER 10 - MAINTENANCE AND SUPPORT.md  CHAPTER 11 - TROUBLESHOOTING GUIDE.md  CHAPTER 12 - FUTURE ENHANCEMENTS.md  CHAPTER 13 - APPENDICES.md  CHAPTER 4 - DATA MODEL.md  CHAPTER 8 - TESTING.md  TABLE OF CONTENTS.md
docs/archive/: ARCHIVE_2024-09-03_Software_Development_Document.md  ARCHIVE_2025-03-15_JWT_Security_Rating.md  ARCHIVE_2025-03-15_Packaged_Trust_Assesment.md  ARCHIVE_2025-03-15_Project_Structure.md  ARCHIVE_2025-03-15_Security_Audit.md  ARCHIVE_2025-03-15_Security_Backlog.md  ARCHIVE_2025-03-15_Software_Development_Document.md  ARCHIVE_2025-03-15_Structure_Chart.md  ARCHIVE_2025-03-15_Testing_Backlog.md  ARCHIVE_2025-03-15_User_Guide.md  Security_Audit.md
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  confetti.rs  lib.rs  routes.rs
frontend/src/components/: about.rs  dashboard.rs  footer.rs  home.rs  icons.rs  login.rs  mod.rs  nav.rs  not_found.rs
frontend/src/components/drone/: flight_path.rs  flight_path_tests.rs  mod.rs
frontend/src/components/navigation/: breadcrumb.rs  mod.rs
frontend/src/components/notifications/: mod.rs  toast.rs
frontend/src/pages/: about.rs  dashboard.rs  email_verified.rs  home.rs  login.rs  mod.rs  password_reset_new.rs  password_reset_request.rs  password_reset_verify.rs  register.rs  registration_complete.rs
frontend/src/pages/dashboard/: chat.rs  data.rs  mod.rs  overview.rs  profile.rs  settings.rs
frontend/src/pages/dashboard/admin/: mod.rs  security_incidents.rs  system_logs.rs  user_detail.rs  user_management.rs
frontend/src/pages/dashboard/settings/tabs/: account_settings.rs  appearance_settings.rs  mod.rs  notification_settings.rs  privacy_settings.rs  security_settings.rs
frontend/src/services/: auth.rs  auth_context.rs  confetti_context.rs  mod.rs  notification_service.rs  request.rs  reset_token_context.rs
frontend/src/static/: styles.css
frontend/static/: styles.css
frontend/static/css/: main.css
frontend/static/css/components/: buttons.css  cards.css  chat.css  drone.css  footer.css  loaders.css  modals.css
frontend/static/css/components/forms/: inputs.css  validation.css
frontend/static/css/components/nav/: navbar.css  sidebar.css
frontend/static/css/core/: base.css  reset.css  variables.css
frontend/static/css/layouts/: containers.css  grid.css
frontend/static/css/pages/about/: about.css  index.css
frontend/static/css/pages/auth/: auth.css  index.css
frontend/static/css/pages/dashboard/: dashboard.css  data.css  index.css  security-incidents.css  settings.css  system-logs.css  user-detail.css
frontend/static/css/pages/home/: home.css  index.css
frontend/static/css/utils/: animations.css  breakpoints.css  helpers.css
migrations/: 20240901010340_initial_schema.sql  20240902010341_add_password_reset.sql  20240903010342_add_revoked_tokens.sql  20250302010343_add_active_tokens.sql
src/: auth.rs  email.rs  lib.rs  main.rs  middleware.rs  validation.rs
src/api/: mod.rs
src/api/handlers/: user_handler.rs
src/api/responses/: mod.rs  user_response.rs
src/api/routes/: health.rs  mod.rs  user_routes.rs
src/api/routes/admin/: logs.rs  mod.rs  security.rs  user_management.rs
src/common/: mod.rs
src/common/error/: api_error.rs  auth_error.rs  db_error.rs  mod.rs
src/common/utils/: mod.rs  string.rs  time.rs  validation.rs
src/common/validation/: mod.rs  password.rs  user.rs
src/config/: config.rs  mod.rs
src/core/: mod.rs
src/core/auth/: active_token.rs  jwt.rs  mod.rs  service.rs  token_revocation.rs
src/core/email/: mod.rs  service.rs  templates.rs
src/core/user/: mod.rs  model.rs  repository.rs  service.rs
src/email/: email.rs
src/handlers/: admin.rs  mod.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: app_config.rs  mod.rs
src/infrastructure/database/: connection.rs  migrations.rs  mod.rs
src/infrastructure/middleware/: admin.rs  auth.rs  cors.rs  csrf.rs  logger.rs  metrics.rs  mod.rs  rate_limit.rs
src/middleware/: cors_logger.rs  middleware.rs  mod.rs
src/models/: session.rs  user.rs
static/: about.html  admin_dashboard.html  dashboard.html  email_verified.html  index.html  login.html
static/css/: dashboard.css  styles.css
static/static/: styles.css
static/templates/: already_verified.html  email_verified.html  error.html  expired_token.html  token_failure.html  verification_resent.html
templates/: already_verified.html  email_verified.html  error.html  expired_token.html  invalid_token.html  token_failure.html  verification_resent.html
tests/: health_check_tests.rs  user_crud_tests.rs  user_tests.rs
