[package]
name = "oxidizedoasis-websands"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9"}
actix-files = "0.6"
actix-cors = "0.7"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4"
bcrypt = "0.15.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
serde_json = "1.0.127"
actix-web-httpauth = "0.8"
futures = "0.3.30"
lettre = "0.11.7"
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.5"
lazy_static = "1.4"
ammonia = "4.0.0"
actix-governor = "0.5"
actix-rt = "2.2"
url = "2.5.2"
tera = "1.15"
thiserror = "1.0.63"


[dev-dependencies]
actix-rt = "2.2"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }