[package]
name = "oxidizedoasis-websands"
version = "0.1.0"
edition = "2021"

[dependencies]
mime = "0.3.17"
actix-web = { version = "=4.9.0"}
actix-files = "0.6"
actix-cors = "0.7"
sqlx = { version = "=0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json"] }
home = "=0.5.5" # Attempt to force an older version
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4"
bcrypt = "0.15.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1.77"
mockall = "^0.12.1" # Moved from dev-dependencies
jsonwebtoken = "9.3"
serde_json = "1.0.127"
actix-web-httpauth = "0.8"
futures = "0.3.30"
futures-util = "0.3.30"
lettre = { version = "=0.11.7", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.5"
lazy_static = "1.4"
ammonia = "=4.0.0"
actix-rt = "2.2"
url = "=2.5.2"
derive_more = { version = "1.0.0", features = ["display", "error", "from", "debug"] }
num_cpus = "1.16.0"
dashmap = "5.5.3"
indexmap = "1.9" # For validator's IndexMap usage if needed directly

time = { version = "0.3", features = ["serde"] }


[dev-dependencies]
actix-rt = "2.2"
sqlx = { version = "=0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json"] }
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4", "serde"] }
# mockall = "^0.12.1" # Removed from dev-dependencies as it's now in [dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlformat = "=0.2.6"
predicates = "2.1.1" # For predicates::option::lift_option

[target.'cfg(not(target_env = "msvc"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[workspace]
members = [
    ".",
    "frontend"
]
