[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
yew-router = "0.18.0"


js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.0", features = [
    "HtmlTextAreaElement",
    "Event",
    "EventTarget",
    "InputEvent",
    "HtmlInputElement"
]}
gloo = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.43"
log = "0.4.22"
chrono = "0.4.38"
